Optimised ModDataParser.